@@ -1,21 +1,22 @@
 package com.bbangle.bbangle.search.dto.response;
 
 import com.bbangle.bbangle.board.dto.BoardResponseDto;
+import java.util.Collections;
 import java.util.List;
 import lombok.Builder;
 
 @Builder
 public record SearchBoardResponse(
     List<BoardResponseDto> content,
-    int itemAllCount,
+    Long itemAllCount,
     int limitItemCount,
     int currentItemCount,
     int pageNumber,
     boolean existNextPage
 ) {
 
-    public static SearchBoardResponse getEmpty(int pageNumber, int limitItemCount, int itemAllCount){
-        return SearchBoardResponse.builder().content(List.of())
+    public static SearchBoardResponse getEmpty(int pageNumber, int limitItemCount, Long itemAllCount){
+        return SearchBoardResponse.builder().content(Collections.emptyList())
                 .itemAllCount(itemAllCount)
                 .pageNumber(pageNumber)
                 .limitItemCount(limitItemCount)
